manifest/namespace.yaml
kind: Namespace
apiVersion: v1
metadata:
  name: devopscloudrucamp
  labels:
    name: devopscloudrucamp
