manifest/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app
  namespace: devopscloudrucamp
  labels:
    app.kubernetes.io/instance: app
spec:
  replicas: 3
  selector:
    matchLabels:
      app.kubernetes.io/name: app
      app.kubernetes.io/instance: app
  template:
    metadata:
      labels:
        app.kubernetes.io/name: app
        app.kubernetes.io/instance: app
    spec:
      serviceAccountName: app
      containers:
        - name: app
          image: "app:v1"
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 8000
              protocol: TCP
          livenessProbe:
            httpGet:
              path: /id
              port: http
          readinessProbe:
            httpGet:
              path: /id
              port: http
