manifest/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: app
  namespace: devopscloudrucamp
  labels:
    app.kubernetes.io/name: app
spec:
  type: ClusterIP
  ports:
    - port: 8000
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app.kubernetes.io/name: app
    app.kubernetes.io/instance: app
